# ARM-Isolation-Monitor

./: README.md
Thesis/: Makefile  Readme  mte  mte.h  mte.s  mte_example.c  mte_pass_compile.txt  pass_mte  pass_mte.s  pass_mte_load  pass_mte_load.s  pass_mte_loadStore  pass_mte_loadStore.s  pass_mte_load_no_opt  pass_mte_load_no_opt.s  pass_mte_load_store_fixed  pass_mte_load_store_fixed.s  pass_mte_manual_address_change  pass_mte_manual_address_change.s  pass_mte_singleFile  pass_mte_singleFile.s  pass_mte_store.s  safe.c  safe.h  safe_load_stores.ll  safe_loadsOnly.ll
Thesis/Demo/: a.out  loadsOnly.s  main.c  mte.c  mte.h  red.c  red.h
Thesis/LLVM/Pass/: CMakeCache.txt  CMakeLists.txt  MTECheckPass.cpp  Makefile  cmake_install.cmake
Thesis/LLVM/Pass2/: CMakeCache.txt  CMakeLists.txt  Makefile  ModifyLoadAddrsPass.cpp  README  cmake_install.cmake
Thesis/LLVM/Pass3/: CMakeCache.txt  CMakeLists.txt  Makefile  ModifyLoadStoreAddrsPass.cpp  cmake_install.cmake
Thesis/PAC/: pac.c  pac.h  pac.s
